--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,3 +14,5 @@ messages:
   cannot_attack_attacker: "&cYou can't attack players while you have PvP turned off!"
   no_permission: "&cYou don't have permission to use that."
   no_such_command: "&cNo such command."
+  pvp_enabled_others: "&cYou've enabled %player%'s PvP."
+  pvp_disabled_others: "&cYou've disabled %player%'s PvP."
