--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,10 @@ settings:
   # You may want to keep it disabled because players with pvp off can use it to attack players with pvp on
   channeling_enchant_disabled: false
 
+  # Makes it so only pet owner can interact with it.
+  # Useful if you don't want people renaming other people's pets.
+  only_owner_can_interact_with_pet: false
+
   # Time (in seconds) to keep player in combat
   combat_time: 25
 
