--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>eu.endermite</groupId>
-    <artifactId>TogglePvP</artifactId>
+    <groupId>me.youhavetrouble</groupId>
+    <artifactId>PreventStabby</artifactId>
     <version>1.2</version>
     <packaging>jar</packaging>
 
-    <name>TogglePvP</name>
+    <name>PreventStabby</name>
 
-    <description>PvP toggle plugin</description>
+    <description>Stop people from getting stabbed!</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
