more folia support shenanigans

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: ${project.version}
 main: me.youhavetrouble.preventstabby.PreventStabby
 authors: [YouHaveTrouble]
 api-version: 1.20
+folia-supported: true
 description: Stop people from getting stabbed!
 soft-depend:
   - WorldGuard
