--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.youhavetrouble</groupId>
     <artifactId>PreventStabby</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0-pre-1</version>
     <packaging>jar</packaging>
 
     <name>PreventStabby</name>
